Fix message overflow

--- a/client/src/App.scss
+++ b/client/src/App.scss
@@ -503,8 +503,11 @@ main {
   flex-direction: column;
   gap: 4px;
   font-size: 1.1rem;
-  overflow-wrap: break-word;
-  word-wrap:break-word;
+  
+  &:first-child {
+    overflow-wrap: break-word;
+    word-wrap:break-word;
+  }
 
   .message-single_author {
     font-weight: 700;
